--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -1,4 +1,4 @@
-<form ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
+<form ng-Controller = "UserRegistrationsCtrl as UserCtrl" ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
 
   <div class="form-group">
     <label for="email">Email</label>
