--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,11 +1,11 @@
 <h1>Home</h1>
 <p>This is the home page.</p>
-<p ng-show="user.id">
+<p id='welcomeUser' ng-show="user.id">
   Welcome {{user.email}}
 </p>
-<li ng-hide="user.id">
+<li id='signInLink' ng-hide="user.id">
   <a ng-href="/#/sign_in">Sign in</a>
 </li>
-<li ng-hide="user.id">
+<li id='registerLink' ng-hide="user.id">
   <a ng-href="/#/register">Register</a>
 </li>
