Added new view and route for search skills, extracted from index.html. Added link from main to take user to skills search page

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -3,6 +3,11 @@
 <p ng-show="user.id">
   Welcome {{user.email}}
 </p>
+
+<p ng-show="user.id">
+  <a ng-href="/#/search_skills">SOLVE MY PROBLEMS!</a>
+</p>
+
 <li ng-hide="user.id">
   <a ng-href="/#/sign_in">Sign in</a>
 </li>
