--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -61,8 +61,8 @@
 
   <button type="submit" class="btn btn-primary btn-lg">Register</button>
 
-  <!-- <div class="alert alert-danger" role="alert" ng-show="error">
+  <div class="alert alert-danger" role="alert" ng-show="error">
     {{error}}
-  </div> -->
+  </div>
 
 </form>
