Began adding skills to user functionality, Extracted method from Search controller, created new view for adding user skills

--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -1,9 +1,13 @@
+<p ng-show="user.id">
+  <a ng-href="/#/">Take me home!</a>
+</p>
+
 <ul ng-controller="listController as ListCtrl" ng-init="ListCtrl.getUsersSkills()">
-  <li class="users-list" ng-repeat="user in ListCtrl.users">
+  <li class="users-list" ng-repeat="user in ListCtrl.users track by $index">
 
     <p class="user-name">
       {{user}}
     </p>
-    
+
   </li>
 </ul>
