--- a/public/views/user_skills_list/search_skills.html
+++ b/public/views/user_skills_list/search_skills.html
@@ -1,3 +1,7 @@
+<p ng-show="user.id">
+  <a ng-href="/#/">Take me home!</a>
+</p>
+
 <section ng-show="user.id" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
 
   <div class="submitSkillstoSearch" >
