--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,6 +8,10 @@
   <a ng-href="/#/search_skills">SOLVE MY PROBLEMS!</a>
 </p>
 
+<p ng-show="user.id">
+  <a ng-href="/#/add_skills">Add my skills!</a>
+</p>
+
 <li ng-hide="user.id">
   <a ng-href="/#/sign_in">Sign in</a>
 </li>
