re-adding location to user model

--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -30,6 +30,13 @@
            class="form-control">
   </div>
 
+  <div class="form-group">
+    <input type="hidden"
+           name="location"
+           id="location"
+           ng-model="UserCtrl.registrationForm.location"
+           class="form-control">
+  </div>
 
   <div class="form-group">
     <input type="hidden"
