adding miles to distance

--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -11,7 +11,7 @@
       {{user.location}}
     </p>
     <p class="user-distance">
-      {{user.distance}}
+      {{user.distance}} miles
     </p>
 
   </li>
