--- a/public/views/add_user_skills.html
+++ b/public/views/add_user_skills.html
@@ -6,9 +6,9 @@
 
   <div class="submitSkillstoSearch" ng-Controller = "addSkillsController as addCtrl" ng-init = "addCtrl.getSkillsList()">
       <section ng-repeat ='skill in addCtrl.skills'>
-        <input type = "checkbox" ng-model = "addCtrl.skill"> select {{skill.name}} </input>
+        <button ng-click="addCtrl.saveSkills(skill)"> select {{skill.name}} </input>
       </section>
-      <button ng-click = "addCtrl.submit"> Submit! <submit>
+      <button ng-click = "addCtrl.submit()"> Submit! <submit>
   </div>
 
   <!-- <div class="skillsSearchBar" ng-hide="loaded">
