Adding messaging on front end

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -18,3 +18,7 @@
 <li ng-hide="user.id">
   <a ng-href="/#/register">Register</a>
 </li>
+
+<p ng-show="user.id">
+  <a ng-href="/#/inbox">Go to my messages!</a>
+</p>
