--- a/public/views/sending_messages/send_messages.html
+++ b/public/views/sending_messages/send_messages.html
@@ -1,5 +1,5 @@
 <div ng-controller="sendingMessagesController as SendCtrl" >
-  <input type="text" ng-model="SendCtrl.messageSubject"> Subject:</input>
-  <input type="text" ng-model="SendCtrl.messageBody">Your message:</input>
+  <input type="text" ng-model="SendCtrl.messageSubject" placeholder="Enter subject"> Subject:</input>
+  <input  type="text" ng-model="SendCtrl.messageBody" placeholder="Enter message">Your message:</input>
   <button ng-click="SendCtrl.sendMessage()"> Send your message </button>
 </div>
