--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,7 +9,7 @@
 </p>
 
 <li ng-hide="user.id">
-  <a ng-href="/#/sign_in">Sign in</a>
+  <a id='signInLink' ng-href="/#/sign_in">Sign in</a>
 </li>
 <li id='registerLink' ng-hide="user.id">
   <a ng-href="/#/register">Register</a>
