Users cannot reply to their own message

--- a/public/views/mailbox/inbox.html
+++ b/public/views/mailbox/inbox.html
@@ -7,18 +7,29 @@
    </section>
 
    <section ng-repeat="message in mailCtrl.messages">
+     <div class="meta">
+       {{ message.user.name }}:
+     </div>
      <div class="message">
        <p>
-         Subject: {{ message.subject }}
+         Subject:
+          {{ message.subject }}
        </p>
        <p>
-         Message: {{ message.body }}
+         Message:
+          {{ message.body }}
 
        </p>
+       <p>
+         {{ message.user.id }}
+       </p>
        <div class="meta">
-         sent by {{ message.user.name }} on {{ message.created_at | dateToISO | date:'medium' }}
-       </div>:
-       <a ng-href="/#/message-reply" ng-click="mailCtrl.setConversationId()" ><button >Reply to message</button></a>
+
+        {{ message.created_at | dateToISO | date:'medium' }}
+      </div>
+
+
+       <a ng-hide="mailCtrl.isMyMessage(message.user.id)" ng-href="/#/message-reply" ng-click="mailCtrl.setConversationId()" ><button >Reply to message</button></a>
      </div>
    </section>
 
