--- a/public/views/user_skills_list/search_skills.html
+++ b/public/views/user_skills_list/search_skills.html
@@ -6,12 +6,8 @@
 
   <div class="submitSkillstoSearch" >
       <section ng-repeat ='skill in SearchCtrl.skills'>
-        <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.name}} </button>
+        <a href ="/#/search_results"><button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.name}} </button></a>
       </section>
-  </div>
-
-  <div class="skillsSearchBar" ng-hide="loaded">
-    <a href ="/#/search_results"><button id="skillSearchSubmit" ng-click="SearchCtrl.getUsersSkills()">Search Skills</button></a>
   </div>
 
 </section>
