PROTRACTOR REGISTER TEST
Added 'registerSpec.js' for testing the 'user_registrations/new.html' partial.
Refactored a few tags for testing purposes.

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -11,6 +11,6 @@
 <li ng-hide="user.id">
   <a id='signInLink' ng-href="/#/sign_in">Sign in</a>
 </li>
-<li id='registerLink' ng-hide="user.id">
-  <a ng-href="/#/register">Register</a>
+<li ng-hide="user.id">
+  <a id='registerLink' ng-href="/#/register">Register</a>
 </li>
