--- a/public/views/mailbox/inbox.html
+++ b/public/views/mailbox/inbox.html
@@ -1,8 +1,21 @@
 <div ng-controller="mailboxController as mailCtrl" ng-init="mailCtrl.getMailbox()">
-  
+
    <section ng-repeat='conv in mailCtrl.conversations'>
      <button ng-click="mailCtrl.getMessages(conv)"> {{conv.subject}} </button>
+
+
    </section>
+
+   <div>
+     <section class='job-request' ng-show ="mailCtrl.isCurrentUserRequesting" >
+       <button ng-click = "mailCtrl.createJob()"> Request Job </button>
+       <input type="text"> Time: </input>
+     </section>
+
+     <section class='job-response' ng-hide ="mailCtrl.isCurrentuserRequesting">
+       <button> Accept Job! </button>
+       <button> Decline Job </button>
+     </section>
 
    <section ng-repeat="message in mailCtrl.messages">
      <div class="meta">
@@ -27,7 +40,16 @@
 
        <a ng-hide="mailCtrl.isMyMessage(message.user.id)" ng-href="/#/message-reply" ng-click="mailCtrl.setConversationId()" ><button >Reply to message</button></a>
      </div>
+
+
+
+
    </section>
+ </div>
+
+
+
+
 
 
 </div>
