--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -16,7 +16,7 @@
 
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="name"
+          <input type="text"
                  name="name"
                  id="name"
                  ng-model="UserCtrl.registrationForm.name"
