--- a/public/css/partials/homepage.css
+++ b/public/css/partials/homepage.css
@@ -1,16 +1,20 @@
 .section {
-  padding: 4em 0 6em; }
+  padding: 4em 0 6em;
+  align-items: stretch;
+  width: 100%; }
 
 section#intro.section {
   position: relative;
   padding: 6em 0 8em;
   background: url("../images/tools copy.jpg") no-repeat top center;
   background-size: cover;
-  text-align: center; }
+  text-align: center;
+  width: 100%; }
   section#intro.section #intro-content {
     position: relative;
     display: block;
     width: 100%;
+    height: 100%;
     z-index: 2; }
     section#intro.section #intro-content h1, section#intro.section #intro-content h2 {
       margin-bottom: 1.5em;
@@ -36,6 +40,12 @@ section#intro.section {
       background: #fff;
       color: #666;
       font-weight: bold; }
+  section#intro.section #sign-in-intro {
+    position: relative;
+    display: block;
+    min-height: 100%;
+    width: 100%;
+    z-index: 2; }
   section#intro.section:after {
     content: "";
     position: absolute;
