--- a/public/scss/partials/homepage.scss
+++ b/public/scss/partials/homepage.scss
@@ -1,6 +1,8 @@
 
 .section {
   padding: 4em 0 6em;
+  align-items: stretch;
+  width: 100%;
 }
 
 section#intro.section {
@@ -9,10 +11,12 @@ section#intro.section {
   background: url('../images/tools copy.jpg') no-repeat top center;
   background-size: cover;
   text-align: center;
+  width: 100%;
   #intro-content {
     position: relative;
     display: block;
     width: 100%;
+    height: 100%;
     z-index: 2;
     h1,h2 {
       margin-bottom: 1.5em;
@@ -47,6 +51,13 @@ section#intro.section {
       font-weight: bold;
     }
 
+  }
+  #sign-in-intro {
+    position: relative;
+    display: block;
+    min-height: 100%;
+    width: 100%;
+    z-index: 2;
   }
   &:after {
     content: "";
