--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,21 +1,22 @@
 
-<section id="welcome" class="section" ng-show="user.id">
-  <div class="row">
-    <div class="small-12 medium-10 medium-centered columns">
-      <div id='welcomeUser'>
-        <h3>Welcome {{user.email}}</h3>
-      </div>
-      <div>
-        <a ng-href="/#/search_skills">SOLVE MY PROBLEMS!</a>
-        <a ng-href="/#/add_skills">Add my skills!</a>
-        <a ng-href="/#/inbox">Go to my messages!</a>
+<section id="intro" class="section">
+
+  <div id="sign-in-intro" ng-show="user.id">
+    <div class="row">
+      <div class="small-12 medium-10 medium-centered columns">
+        <div id='welcomeUser'>
+          <h2>Hello {{user.name}}!</h2>
+        </div>
+        <div>
+          <a class="mega-button" ng-href="/#/search_skills">SOLVE MY PROBLEMS!</a>
+          <a class="mega-button" ng-href="/#/add_skills">Add my skills!</a>
+          <a class="mega-button" ng-href="/#/inbox">Go to my messages!</a>
+        </div>
       </div>
     </div>
   </div>
-</section>
 
-<section id="intro" class="section" ng-hide="user.id">
-  <div id="intro-content">
+  <div id="intro-content" ng-hide="user.id">
     <div class="row">
       <div class="small-12 columns">
         <h1>Get help from your community to solve life's little problems</h1>
