user-profile link and view

--- a/public/views/user_profile/user_profile.html
+++ b/public/views/user_profile/user_profile.html
@@ -1,2 +1,4 @@
 <section ng-controller ="userProfileController as userCtrl">
-<h ng-bind = "userCtrl.getUserObject.name"> </h>
+<h ng-bind = "userCtrl.getUserObject().email"> </h>
+<p> Hello </p>
+</section>
