--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -20,7 +20,7 @@
 
     <a ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">  <button> Message {{user.name}} </button> </a>
 
-    <a ng-href="/#/view-profile" ng-click = "ListCtrl.saveUserId(user.id)"> <button> {{user.name}}'s Profile </button> </a>
+    <a ng-href="/#/user_profile" ng-click = "ListCtrl.saveUserId(user.id)"> <button> {{user.name}}'s Profile </button> </a>
 
   </li>
 </ul>
