to play around with

--- a/public/views/user_profile/user_profile.html
+++ b/public/views/user_profile/user_profile.html
@@ -1,4 +1,7 @@
 <section ng-controller ="userProfileController as userCtrl">
-<h ng-bind = "userCtrl.getUserObject().email"> </h>
-<p> Hello </p>
+  <div >
+    <h1> HI THERE {{userCtrl.userObject.name}}</h1>
+  </div>
+
+
 </section>
