--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,7 +8,7 @@
           <h2>Hello {{user.name}}!</h2>
         </div>
         <div>
-          <a class="mega-button" ng-href="/#/search_skills">SOLVE MY PROBLEMS!</a>
+          <a class="mega-button" ng-href="/#/search_skills">Solve My Problem!</a>
           <a class="mega-button" ng-href="/#/add_skills">Add my skills!</a>
           <a class="mega-button" ng-href="/#/inbox">Go to my messages!</a>
         </div>
