--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -91,7 +91,7 @@
         </ui-gmap-search-box>
         </ui-gmap-google-map>
 
-        <button type="submit" class="mega-button">Register</button>
+        <button type="submit" class="mega-button submit-button">Register</button>
 
         <div class="alert alert-danger" role="alert" ng-show="error">
           {{error}}
