--- a/public/css/partials/add_skills.css
+++ b/public/css/partials/add_skills.css
@@ -1,24 +1,39 @@
 /*
-Error: Undefined variable: "$colour_two".
-        on line 15 of public/scss/partials/forms.scss
+Error: Undefined mixin 'mega-button'.
+        on line 17 of public/scss/partials/add_skills.scss, in `mega-button'
+        from line 17 of public/scss/partials/add_skills.scss
 
-10:       content: "";
-11:       height: 2px;
-12:       width: 50%;
-13:       left: 25%;
-14:       bottom: 0;
-15:       background: $colour_two;
-16:     }
-17:   }
-18:   .ui-gmap-google_map.angular-google-map {
-19:     div.angular-google-map {
-20:       div.angular-google-map-container {
+12:       position: relative;
+13:       width: auto;
+14:       clear: both;
+15:       float: none;
+16:       .checkbox-container {
+17:         @include mega-button;
+18:         background-color: $colour_two;
+19:         color: $colour_one;
+20:         display: block;
+21:         input {
+22:           margin: 0 0 0 0 !important;
 
 Backtrace:
-public/scss/partials/forms.scss:15
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:395:in `visit_prop'
+public/scss/partials/add_skills.scss:17:in `mega-button'
+public/scss/partials/add_skills.scss:17
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:349:in `block in visit_mixin'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:98:in `block in with_mixin'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:98:in `with_mixin'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:347:in `visit_mixin'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `with_base'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block (2 levels) in visit_rule'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `map'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block in visit_rule'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:429:in `visit_rule'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
@@ -90,4 +105,4 @@ public/scss/partials/forms.scss:15
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$colour_two\".\A         on line 15 of public/scss/partials/forms.scss\A \A 10:       content: \"\";\A 11:       height: 2px;\A 12:       width: 50%;\A 13:       left: 25%;\A 14:       bottom: 0;\A 15:       background: $colour_two;\A 16:     }\A 17:   }\A 18:   .ui-gmap-google_map.angular-google-map {\A 19:     div.angular-google-map {\A 20:       div.angular-google-map-container {"; }
+  content: "Error: Undefined mixin 'mega-button'.\A         on line 17 of public/scss/partials/add_skills.scss, in `mega-button'\A         from line 17 of public/scss/partials/add_skills.scss\A \A 12:       position: relative;\A 13:       width: auto;\A 14:       clear: both;\A 15:       float: none;\A 16:       .checkbox-container {\A 17:         @include mega-button;\A 18:         background-color: $colour_two;\A 19:         color: $colour_one;\A 20:         display: block;\A 21:         input {\A 22:           margin: 0 0 0 0 !important;"; }
