--- a/public/css/partials/footer.css
+++ b/public/css/partials/footer.css
@@ -1,46 +1,18 @@
 /*
 Error: Undefined variable: "$colour_two".
-        on line 15 of public/scss/partials/forms.scss
+        on line 3 of public/scss/partials/footer.scss
 
-10:       content: "";
-11:       height: 2px;
-12:       width: 50%;
-13:       left: 25%;
-14:       bottom: 0;
-15:       background: $colour_two;
-16:     }
-17:   }
-18:   .ui-gmap-google_map.angular-google-map {
-19:     div.angular-google-map {
-20:       div.angular-google-map-container {
+1: footer#colophon {
+2:   padding: 3em 0;
+3:   background: $colour_two;
+4:   border-top: 2px solid #fff;
+5: }
 
 Backtrace:
-public/scss/partials/forms.scss:15
+public/scss/partials/footer.scss:3
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:395:in `visit_prop'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `with_base'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block (2 levels) in visit_rule'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `map'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block in visit_rule'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:429:in `visit_rule'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `with_base'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block (2 levels) in visit_rule'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `map'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block in visit_rule'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:429:in `visit_rule'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 /Users/seanhawkridge/.rvm/gems/ruby-2.1.5/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
@@ -90,4 +62,4 @@ public/scss/partials/forms.scss:15
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$colour_two\".\A         on line 15 of public/scss/partials/forms.scss\A \A 10:       content: \"\";\A 11:       height: 2px;\A 12:       width: 50%;\A 13:       left: 25%;\A 14:       bottom: 0;\A 15:       background: $colour_two;\A 16:     }\A 17:   }\A 18:   .ui-gmap-google_map.angular-google-map {\A 19:     div.angular-google-map {\A 20:       div.angular-google-map-container {"; }
+  content: "Error: Undefined variable: \"$colour_two\".\A         on line 3 of public/scss/partials/footer.scss\A \A 1: footer#colophon {\A 2:   padding: 3em 0;\A 3:   background: $colour_two;\A 4:   border-top: 2px solid #fff;\A 5: }"; }
