--- a/public/css/partials/homepage.css
+++ b/public/css/partials/homepage.css
@@ -36,16 +36,19 @@ section#intro.section {
     section#intro.section #intro-content .actions h2 {
       margin: 1em 0; }
     section#intro.section #intro-content a.mega-button {
-      margin: 0 1em;
-      background: #fff;
-      color: #666;
-      font-weight: bold; }
+      margin: 0 1em; }
   section#intro.section #sign-in-intro {
     position: relative;
     display: block;
     min-height: 100%;
     width: 100%;
     z-index: 2; }
+    section#intro.section #sign-in-intro #welcomeUser {
+      margin-bottom: 4em; }
+      section#intro.section #sign-in-intro #welcomeUser h2 {
+        color: #fff; }
+    section#intro.section #sign-in-intro a {
+      margin: 0 1em; }
   section#intro.section:after {
     content: "";
     position: absolute;
