--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,37 +1,10 @@
 
-
-$colour_one: #FFE181;
-
-.angular-google-map-container { height: 400px; }
-
-#content {
-  min-height: 80vh;
-  display: flex;
-}
-
-@mixin mega-button {
-  border: 2px solid #fff;
-  border-radius: 5px;
-  padding: 1em;
-  text-transform: uppercase;
-  font-family: "brandon-grotesque";
-  background: $colour_one;
-}
-
-a.mega-button, button.mega-button {
-  @include mega-button;
-  color: #fff;
-}
-
-footer#colophon {
-  padding: 3em 0;
-  background: #222;
-}
-
-.section {
-  text-align: center;
-}
+@import 'partials/global';
 
 @import 'partials/header';
 @import 'partials/homepage';
 @import 'partials/forms';
+@import 'partials/search';
+@import 'partials/add_skills';
+@import 'partials/messaging';
+@import 'partials/footer';
