--- a/public/views/sending_messages/reply_messages.html
+++ b/public/views/sending_messages/reply_messages.html
@@ -1,4 +1,16 @@
-<div ng-controller="replyingMessagesController as replyCtrl" >
-  <label>Your Reply:</label><input  type="text" ng-model = "replyCtrl.replyBody" placeholder="Enter message">
-  <button ng-click="replyCtrl.sendReply()"> Send your message </button>
-</div>
+
+<section id="send-message" class="section message">
+
+  <div class="row">
+    <div class="small-12 medium-8 medium-centered columns">
+
+      <div ng-controller="replyingMessagesController as replyCtrl" >
+        <label>Your Reply:</label><input  type="text" ng-model = "replyCtrl.replyBody" placeholder="Enter message">
+        <button class="mega-button" g-click="replyCtrl.sendReply()"> Send your reply </button>
+      </div>
+
+
+    </div>
+  </div>
+
+</section>
