--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -1,6 +1,5 @@
 
-<section id="search-results" class="section">
-
+<section id="search-results" class="section search">
 
   <div class="row">
     <div class="small-12 medium-10 medium-centered columns">
@@ -8,16 +7,16 @@
 
         <h2>Good news! There are {{ ListCtrl.users.length }} people near you who might be able to help:</h2>
 
-        <div class="users-list" ng-repeat="user in ListCtrl.users | orderBy :'distance'">
+        <div class="users-list" ng-repeat="user in ListCtrl.users | orderBy : -'distance'">
 
           <div class="user-name">
-            {{user.name}}
+            <h3>{{user.name}}</h3>
           </div>
           <div class="user-location">
-            {{user.location}}
+            <h4>{{user.location}}</h4>
           </div>
           <div class="user-distance">
-            {{user.distance}} miles from you
+            <h4>{{user.distance}} miles from you</h4>
           </div>
 
           <a class="mega-button" ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">Send {{user.name}} a message!</a>
