--- a/public/views/user_skills_list/search_skills.html
+++ b/public/views/user_skills_list/search_skills.html
@@ -1,13 +1,22 @@
-<p ng-show="user.id">
-  <a ng-href="/#/">Take me home!</a>
-</p>
 
-<section ng-show="user.id" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
+<section id="search-skills" class="section search" ng-show="user.id" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
 
-  <div class="submitSkillstoSearch" >
-      <section ng-repeat ='skill in SearchCtrl.skills'>
-        <a href ="/#/search_results"><button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.name}} </button></a>
-      </section>
+  <div class="row">
+    <div class="small-12 columns">
+      <h2>What do you need help with?</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="small-12 medium-10 medium-centered columns">
+
+      <div class="submitSkillstoSearch" >
+          <div class="button-container" ng-repeat='skill in SearchCtrl.skills'>
+            <a class="mega-button" href="/#/search_results" ng-click="SearchCtrl.saveSkills(skill)"> {{skill.name}} </a>
+          </div>
+      </div>
+
+    </div>
   </div>
 
 </section>
