--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -75,6 +75,7 @@
     events="UserCtrl.locationPicker.searchbox.events"
     position="BOTTOM_RIGHT">
   </ui-gmap-search-box>
+  <ui-gmap-marker coords='UserCtrl.locationPicker.marker.coords' idKey='1'></ui-gmap-marker>
   </ui-gmap-google-map>
 
   <button type="submit" class="btn btn-primary btn-lg">Register</button>
