fixing map marker

--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -83,7 +83,7 @@
         </script>
 
         <label for="location">The area you live in</label>
-        <ui-gmap-google-map center='UserCtrl.locationPicker.map.center' zoom='UserCtrl.locationPicker.map.zoom'>
+        <ui-gmap-google-map center='UserCtrl.locationPicker.map.center' zoom='UserCtrl.locationPicker.map.zoom' options='UserCtrl.locationPicker.map.options'>
         <ui-gmap-search-box
           template="UserCtrl.locationPicker.searchbox.template"
           events="UserCtrl.locationPicker.searchbox.events"
