count of jobs received and jobs done visible on user profile

--- a/public/views/user_profile/user_profile.html
+++ b/public/views/user_profile/user_profile.html
@@ -1,7 +1,19 @@
-<section ng-controller ="userProfileController as userCtrl">
-  <div >
-    <h1> HI THERE {{userCtrl.userObject.name}}</h1>
+<section ng-controller ="userProfileController as userCtrl"  >
+  <div>
+    <h1> {{userCtrl.userObject.name}} </h1>
+    <h3> Contact: {{userCtrl.userObject.email}}</h3>
+    <!-- <div> {{userCtrl.userObject.name}} has the following skills:
+    <section ng-repeat 'skill in userCtrl.userSkills'>
+      {{skill.name}}
+    <section>
+    </div> -->
+    <h3> {{userCtrl.userObject.name}} has undertaken {{userCtrl.jobsCount}} jobs! </h3>
+    <h3> {{userCtrl.userObject.name}} has received {{userCtrl.receivedJobsCount}} jobs. </h3>
+
   </div>
+
+
+
 
 
 </section>
