--- a/public/views/user_profile/user_profile.html
+++ b/public/views/user_profile/user_profile.html
@@ -1,4 +1,8 @@
-<section ng-controller ="userProfileController as userCtrl">
-<h ng-bind = "userCtrl.getUserObject().email"> </h>
-<p> Hello </p>
+<section ng-controller ="userProfileController as userCtrl" ng-init="userCtrl.getUserObject()">
+  <div >
+    <h1> User name: {{userCtrl.userObject.name}}</h1>
+    <h1> User email: </h1>
+  </div>
+
+
 </section>
